examples/misc/error/eval_zero-div_div.bfr
let _ = 123 / 0

codegen []